auth almost done
