# src/main/java/pl/kwojcik/project_lab/user/UserEntity.java
@@ -1,0 +1,22 @@
+package pl.kwojcik.project_lab.user;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.Id;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Entity
+@Data
+@NoArgsConstructor
+public class UserEntity {
+
+    @Id
+    @GeneratedValue
+    private Long id;
+    private String username;
+    private String passwordHash;
+
+
+
+}
